--- a/Eventos.html
+++ b/Eventos.html
@@ -3,17 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rolinga!</title>
+    <title>Eventos</title>
     <link rel="shortcut icon" href="static/img/rolinga.ico" type="image/x-icon">
-
 </head>
 <body>
     <header>
-        <div class="contenedor">
+        <nav>
+            <div class="contenedor">
             <div class="menu"><a href="index.html">
                 <img src="static/img/LOGO rolinga.png" height="90px" alt=""></a>
             </div>
-        <nav>
             <ul type="square">
                 <li><a href="Eventos.html">Eventos</a></li>
                 <li><a href="Noticias.html">Noticias</a></li>
@@ -21,26 +20,6 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <section id="banner" class="banner.css">
-            <h1>Bienvenidos a Rolinga </h1> <br>
-            <h2>Tu sitio favorito de Conciertos en vivo</h2>
-        </section>
-        <section id="search">
-            <h2>¿Que concierto estas buscando?</h2>
-        </section>
     
-        <footer>
-            <a href="">Terminos y condiciones</a>
-            <a href="">Preguntas frecuentes</a>
-            <a href="">Redes Sociales</a>
-
-        </footer>
-
-
-
-
-    </main>
-
 </body>
 </html>
