agregar color del header

--- a/Noticias.html
+++ b/Noticias.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noticias</title>
     <link rel="shortcut icon" href="static/img/rolinga.ico" type="image/x-icon">
+    <link href="static/css/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <header>
