--- a/index.html
+++ b/index.html
@@ -21,9 +21,13 @@
         </nav>
     </header>
     <main>
-        <section id="banner" class="banner.css">
+        <section id="banner" >
             <h1>Bienvenidos a Rolinga </h1> <br>
             <h2>Tu sitio favorito de Conciertos en vivo</h2>
+            <video width="100%" height="500px" loop autoplay muted>
+                <source src="static/video/recital.mp4" type="video/mp4">            
+              Your browser does not support the video tag.
+            </video>
         </section>
         <section id="search">
             <h2>¿Que concierto estas buscando?</h2>
