--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Rolinga!</title>
     <link rel="shortcut icon" href="static/img/rolinga.ico" type="image/x-icon">
     <link href="static/css/style.css" rel="stylesheet" type="text/css" />
+    <script src="https://kit.fontawesome.com/fd04a21d6c.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    
 </head>
 <body>
     <header>
@@ -14,9 +19,10 @@
             </div>
         <nav>
             <ul type="square">
-                <li><a href="Eventos.html">Eventos</a></li>
+                <li><a href="index.html">Eventos</a></li>
                 <li><a href="Noticias.html">Noticias</a></li>
-                <li><a href="Contactos.html">Contactos</a></li>
+                <li><a href="Comentarios.html">Comentarios</a></li>
+                <li><a href="Login.html">Inicia Sesion</a></li>
             </ul>
         </nav>
     </header>
@@ -39,6 +45,13 @@
         <a href="">Terminos y condiciones</a>
         <a href="">Preguntas frecuentes</a>
         <a href="">Redes Sociales</a>
+        <a href=""><i class="fas fa-question-circle"></i></a>
+        <div class="social-icons">
+            <a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
+            <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+        <p>2024 Rolinga. Todos los derechos reservados.</p>
 
     </footer>
 </body>
