--- a/Comentarios.html
+++ b/Comentarios.html
@@ -18,7 +18,7 @@
                 <div class="menu"><a href="index.html">
                     <img src="static/img/LOGO rolinga.png" height="90px" alt=""></a>
                 </div>
-            <ul type="square">
+            <ul >
                 <li><a href="index.html">Eventos</a></li>
                 <li><a href="Noticias.html">Noticias</a></li>
                 <li><a href="Comentarios.html">Comentarios</a></li>
@@ -27,9 +27,22 @@
         </nav>
     </header>
     <main>
-
+        <form action="link" method="post">
+            <label for="name">Nombre</label>
+            <input type="text" id="name" placeholder="Ingresa tu nombre" size="30" maxlength="10" required>
+            <br><br>
+            <label for="lastname">Apellido</label>
+            <input type="text" id="lastname" placeholder="Ingresa tu apellido" size="30" maxlength="10">
+            <br><br>
+            <label for="mail">Correo Electronico</label>
+            <input type="email" id="mail" placeholder="Ingresa tu correo electronico" size="30" maxlength="10">
+            <br><br>
+            </fieldset>
+            <p>Dejanos tu comentario</p>
+            <textarea placeholder="Ingresa su mensaje..." name="coments" cols="30" rows="10"></textarea>
+            <br>
+            <input type="submit" value="Enviar" />
     </main>
-
     <footer>
         <a href="">Terminos y condiciones</a>
         <a href="">Preguntas frecuentes</a>
