agregando mas codigo

--- a/Comentarios.html
+++ b/Comentarios.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,17 +28,17 @@
     </header>
     <main>
         <form action="link" method="post">
-            <label for="name">Nombre</label>
+            <label for="name">Nombre:</label>
             <input type="text" id="name" placeholder="Ingresa tu nombre" size="30" maxlength="10" required>
             <br><br>
-            <label for="lastname">Apellido</label>
+            <label for="lastname">Apellido:</label>
             <input type="text" id="lastname" placeholder="Ingresa tu apellido" size="30" maxlength="10">
             <br><br>
-            <label for="mail">Correo Electronico</label>
+            <label for="mail">Correo Electronico:</label>
             <input type="email" id="mail" placeholder="Ingresa tu correo electronico" size="30" maxlength="10">
             <br><br>
             </fieldset>
-            <p>Dejanos tu comentario</p>
+            <p>Dejanos tu comentario:</p>
             <textarea placeholder="Ingresa su mensaje..." name="coments" cols="30" rows="10"></textarea>
             <br>
             <input type="submit" value="Enviar" />
@@ -46,7 +46,6 @@
     <footer>
         <a href="">Terminos y condiciones</a>
         <a href="">Preguntas frecuentes</a>
-        <a href="">Redes Sociales</a>
         <a href=""><i class="fas fa-question-circle"></i></a>
         <div class="social-icons">
             <a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
