--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,14 +37,49 @@
         </section>
         <section id="search">
             <h2>¿Que concierto estas buscando?</h2>
+            <div class="busqueda">
+                <input type="text" placeholder="">
+                <button><i class="fa-solid fa-magnifying-glass"></i></button>
+            </div>
         </section>
-    
 
+        <div class="container">
+            <div class="card">
+            <img src="static/img/691feef4-6ebe-489e-9380-ec49185385bb.jpg">
+            <h4>Jonas Brothers: THE TOUR</h4>
+            <a href="https://www.livenation.lat/show/1465138/jonas-brothers-the-tour/buenos%20aires/2024-04-25/es">Leer más</a>
+        </div>
+        <div class="card">
+            <img src="static/img/unnamed.jpg">
+            <h4>Pedro Capó</h4>
+            <a href="http://teatropera.com/show/pedro-capo">Leer más</a>
+        </div>
+        <div class="card">
+            <img src="static/img/LUCKY.jpg">
+            <h4>Luck Ra</h4>
+            <a href="https://www.shazam.com/es-es/event/5109c9a9-8c0b-4d4a-ae0f-81c3fa4761f4">Leer más</a>
+        </div>
+        <div class="card">
+            <img src="static/img/Sin título.png">
+            <h4>MEGADETH</h4>
+            <a href="https://tickets.movistararena.com.ar/landing/13192-megadeth?idEspectaculoCartel=13192&cHashValidacion=58f33317930c76ecca3a6a495c1c5f1003b208ba">Leer más</a>
+        </div>
+        <div class="card">
+            <img src="static/img/15395133.jpeg">
+            <h4>No te va a gustar</h4>
+            <a href="https://www.bandsintown.com/es/e/105268282-no-te-va-gustar-at-plaza-de-la-musica">Leer más</a>
+        </div>
+        <div class="card">
+            <img src="static/img/Eric_Clapton_-_Royal_Albert_Hall_-_Wednesday_24th_May_2017_EricClaptonRAH240517-30_(34987232355)_(cropped).jpg">
+            <h4>Eric Clapton</h4>
+            <a href="https://livepass.com.ar/events/eric-clapton-en-velez-09-2024">Leer más</a>
+        </div>
+        </div>
+        
     </main>
     <footer>
         <a href="">Terminos y condiciones</a>
         <a href="">Preguntas frecuentes</a>
-        <a href="">Redes Sociales</a>
         <a href=""><i class="fas fa-question-circle"></i></a>
         <div class="social-icons">
             <a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
