--- a/Noticias.html
+++ b/Noticias.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,12 +28,13 @@
     </header>
     <main>
 
+    
+
     </main>
 
     <footer>
         <a href="">Terminos y condiciones</a>
         <a href="">Preguntas frecuentes</a>
-        <a href="">Redes Sociales</a>
         <a href=""><i class="fas fa-question-circle"></i></a>
         <div class="social-icons">
             <a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
