--- a/Comentarios.html
+++ b/Comentarios.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -26,23 +28,27 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="container">
         <form action="link" method="post">
-            <label for="name">Nombre:</label>
-            <input type="text" id="name" placeholder="Ingresa tu nombre" size="30" maxlength="10" required>
-            <br><br>
-            <label for="lastname">Apellido:</label>
-            <input type="text" id="lastname" placeholder="Ingresa tu apellido" size="30" maxlength="10">
-            <br><br>
-            <label for="mail">Correo Electronico:</label>
-            <input type="email" id="mail" placeholder="Ingresa tu correo electronico" size="30" maxlength="10">
-            <br><br>
-            </fieldset>
-            <p>Dejanos tu comentario:</p>
-            <textarea placeholder="Ingresa su mensaje..." name="coments" cols="30" rows="10"></textarea>
-            <br>
-            <input type="submit" value="Enviar" />
-    </main>
+            <div class="form-group">
+                <label for="name">Nombre:</label>
+                <input type="text" class="form-control" id="name" placeholder="Ingresa tu nombre" required>
+            </div>
+            <div class="form-group">
+                <label for="lastname">Apellido:</label>
+                <input type="text" class="form-control" id="lastname" placeholder="Ingresa tu apellido">
+            </div>
+            <div class="form-group">
+                <label for="mail">Correo Electrónico:</label>
+                <input type="email" class="form-control" id="mail" placeholder="Ingresa tu correo electrónico">
+            </div>
+            <div class="form-group">
+                <label for="coments">Dejanos tu comentario:</label>
+                <textarea class="form-control" id="coments" placeholder="Ingresa tu mensaje..." name="coments" rows="5"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Enviar</button>
+        </form>
+    </main>    
     <footer>
         <a href="">Terminos y condiciones</a>
         <a href="">Preguntas frecuentes</a>
