--- a/Comentarios.html
+++ b/Comentarios.html
@@ -28,7 +28,7 @@
             </ul>
         </nav>
     </header>
-    <main class="container">
+    <main >
         <form action="link" method="post">
             <div class="form-group">
                 <label for="name">Nombre:</label>
@@ -46,7 +46,9 @@
                 <label for="coments">Dejanos tu comentario:</label>
                 <textarea class="form-control" id="coments" placeholder="Ingresa tu mensaje..." name="coments" rows="5"></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
+            <div class="d-flex justify-content-end">
+                <button type="submit" class="btn btn-primary">Enviar</button>
+            </div>
         </form>
     </main>    
     <footer>
