--- a/Noticias.html
+++ b/Noticias.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rolinga!</title>
     <link rel="shortcut icon" href="static/img/rolinga.ico" type="image/x-icon">
-    <link href="static/css/style.css" rel="stylesheet" type="text/css" />
+    <link href="static/css/style.css" rel="stylesheet" type="text/css">
     <link href="static/css/news.css" rel="stylesheet" type="text/css" />
     <script src="https://kit.fontawesome.com/fd04a21d6c.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +18,7 @@
         <nav>
             <div class="contenedor">
                 <div class="menu"><a href="index.html">
-                    <img src="static/img/LOGO rolinga.png" height="90px" alt=""></a>
+                    <img src="static/img/LOGOrolinga.png" height="90px" alt=""></a>
                 </div>
             <ul type="square">
                 <li><a href="index.html">Eventos</a></li>
