--- a/Comentarios.html
+++ b/Comentarios.html
@@ -18,7 +18,7 @@
         <nav>
             <div class="contenedor">
                 <div class="menu"><a href="index.html">
-                    <img src="static/img/LOGOrolinga.png" height="90px" alt=""></a>
+                    <img src="static/img/LOGOrolinga.png" height="90" alt=""></a>
                 </div>
             <ul >
                 <li><a href="index.html">Eventos</a></li>
