--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
             <div class="menu"><a href="index.html">
-                <img src="static/img/LOGOrolinga.png" height="90px" alt=""></a>
+                <img src="static/img/LOGOrolinga.png" height="90" alt=""></a>
             </div>
         <nav>
             <ul type="square">
