--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section id="banner" >
             <h1>Bienvenidos a Rolinga </h1> <br>
             <h2>Tu sitio favorito de Conciertos en vivo</h2>
-            <video width="100%" height="500px" loop autoplay muted>
+            <video class="responsive-video" loop autoplay muted>
                 <source src="static/video/recital.mp4" type="video/mp4">            
               Your browser does not support the video tag.
             </video>
